# texler

./: .env.backend.example  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.backend  README-NIX.md  README.md  basic_schema.sql  docker-compose.yml  flake.nix  run_backend_tests.sh  run_tests.sh
apps/web/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  test.html  test_compile.py  test_compile_detailed.py  vite.config.ts
apps/web/public/: index.html
apps/web/src/: App.css  App.tsx  config.ts  types.ts  vite-env.d.ts
apps/web/src/components/: FileBrowser.tsx  FileTabs.tsx  LoginPanel.tsx
apps/web/src/hooks/: useAuth.ts  useProjectState.ts
demo/: main.tex
demo/sections/: conclusion.tex  introduction.tex  methods.tex  results.tex  results_clean.tex
docker/latex/: Dockerfile  package.json  server.py
docker/latex/test/: example.tex
latex/: Dockerfile  package.json  sample.tex
migrations/: 001_add_oidc_to_users.sql  001_initial_schema.sql  002_add_workspaces.sql  003_add_blacklisted_tokens.sql  004_fix_latex_engine_type.sql  005_create_functions.sql
src/: admin_init.rs  error.rs  lib.rs  main.rs  migrate.rs  server.rs  websocket.rs
src/config/: mod.rs
src/handlers/: auth.rs  collaboration.rs  compilation.rs  file.rs  latex_proxy.rs  mod.rs  project.rs  user.rs  workspace.rs
src/middleware/: mod.rs  rate_limit.rs
src/models/: auth.rs  collaboration.rs  compilation.rs  email_verification.rs  file.rs  mod.rs  password_reset.rs  project.rs  token_blacklist.rs  user.rs  workspace.rs
