[package]
name = "texler-backend"
version = "0.1.0"
edition = "2021"
description = "A high-performance collaborative LaTeX editor backend"
authors = ["Texler Team"]
license = "MIT"
repository = "https://github.com/texler/texler"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart", "macros"] }
tokio = { version = "1.40", features = ["full"] }
tower = { version = "0.4", features = ["util", "make"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace", "compression-gzip", "limit"] }
hyper = { version = "0.14", features = ["server", "tcp"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate", "derive"], default-features = false }
deadpool-postgres = "0.14"
redis = { version = "0.25", features = ["tokio-comp"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication & Security
jsonwebtoken = "9.3"
bcrypt = "0.15"
uuid = { version = "1.11", features = ["v4", "serde", "fast-rng"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
authware = { git = "https://github.com/Force67/authware.git" }

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots", "connect"], default-features = false }
futures = "0.3"
futures-util = "0.3"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Validation
validator = { version = "0.19", features = ["derive"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Utilities
once_cell = "1.20"
lazy_static = "1.5"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
num_cpus = "1.16"
percent-encoding = "2.3"
url = "2.5"

# Async utilities
tokio-cron-scheduler = "0.10"
background-jobs = "0.14"

# Compression
flate2 = "1.0"

# Email
lettre = { version = "0.11", features = ["rustls-tls"], default-features = false }

# Metrics
prometheus = "0.13"
regex = "1.12.2"

[dev-dependencies]
# Testing framework
tokio-test = "0.4"
reqwest = { version = "0.12", features = ["json", "multipart"] }
tempfile = "3.0"
anyhow = "1.0"

[features]
default = []
oidc-test-bin = []

[[bin]]
name = "oidc_test_server"
path = "src/bin/oidc_test_server.rs"
required-features = ["oidc-test-bin"]

[patch.crates-io]
# Use patched versions if needed

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true
